# coredirect

./: .gitignore  LICENSE  Makefile.am  README  configure.ac
examples/: barrier_check.h  cc2_pingpong.c  cc2_pingpong.h  cc_allreduce.h  cc_barrier.h  cc_fanin.h  cc_ff_barrier.h  cc_latency_test.h  cc_main.c  cc_pingpong.c  cc_rk_allreduce.h  cc_rk_barrier.h  cc_utils.h  task_pingpong.c
tests/: gtest_main.cc
